--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -6442,6 +6442,9 @@ header#header > .container-fluid {
 }
 
 @media (min-width: 992px) {
+  #navbarCollapse {
+    visibility: visible !important;
+  }
   .dropdown-menu {
     -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
             box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
